# OOP

./: CMakeLists.txt  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: trol.h
src/: trol.cpp
test/: test01.cpp
